# WCG4

./: .gitignore  CMakeLists.txt  Makefile  README  WCG4.cc  WCG4.in  vis.mac
include/: WCG4ActionInitialization.hh  WCG4Analysis.hh  WCG4DetectorConstruction.hh  WCG4PhysList.hh  WCG4PhysListConfig.hh  WCG4PhysListFactory.hh  WCG4PhysicsList.hh  WCG4PhysicsListFactory.hh  WCG4RunAction.hh  WCG4SimConfig.hh  WCG4SimManager.hh  WCG4SimMananger.hh  WCG4StackingAction.hh  WCG4SteppingAction.hh  WCG4UserPrimaryGeneratorAction.hh  common.hh
src/: WCG4ActionInitialization.cc  WCG4DetectorConstruction.cc  WCG4PhysList.cc  WCG4PhysListConfig.cc  WCG4PhysListFactory.cc  WCG4PhysicsList.cc  WCG4PhysicsListFactory.cc  WCG4RunAction.cc  WCG4SimConfig.cc  WCG4SimManager.cc  WCG4StackingAction.cc  WCG4SteppingAction.cc  WCG4UserPrimaryGeneratorAction.cc
